Fix alignment of social media header icons

--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ a {
 .social_widgets{
   position: relative;
   float: right;
-  top: 82px;
+  top: 62px;
 }
 
 .youtube_widget {
